--- a/brian_tambara_com/templates/base.html
+++ b/brian_tambara_com/templates/base.html
@@ -1,12 +1,15 @@
+{% load django_vite %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
+  {% vite_hmr_client %}
+  {% vite_asset 'src/main.ts' %}
   <title>{% block title %}{% endblock %}</title>
 </head>
-<body>
-
-{% block content %}
-{% endblock %}
-
-</body>
+  <body>
+    {% block content %}
+    {% endblock %}
+  </body>
 </html>
