--- a/www/src/scss/style.scss
+++ b/www/src/scss/style.scss
@@ -75,6 +75,13 @@ button:focus-visible {
   text-align: center;
 }
 
+#resume {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
 
 @media (prefers-color-scheme: light) {
   :root {
